syntax = "proto3";

import "google/protobuf/empty.proto";

message Game {
  string _id = 21;
  string url = 1;
  string types = 2;
  string name = 3;
  string desc_snippet = 4;
  string recent_reviews = 5;
  string all_reviews = 6;
  string release_date = 7;
  string developer = 8;
  string publisher = 9;
  string popular_tags = 10;
  string game_details = 11;
  string languages = 12;
  string achievements = 13;
  string genre = 14;
  string game_description = 15;
  string mature_content = 16;
  string minimum_requirements = 17;
  string recommended_requirements = 18;
  string original_price = 19;
  string discount_price = 20;

}

message ListGamesWhishResponse {
  repeated Game games = 1;
}

message ListGamesWhishRequest {
  int64 user_id = 1;
}

message AddGameWhishRequest {
  int64  user_id = 1;
  optional Game game = 2;
}

message DeleteGameWhishRequest {
  int64  user_id = 1;
  string name = 2;
  string _id = 3;
}

service Whishlist {

  // Returns a list of games in the whislist
  rpc ListGames(ListGamesWhishRequest) returns (ListGamesWhishResponse) {}

  // Add a new game to the whislist
  rpc AddGame(AddGameWhishRequest) returns (Game) {}

  // Deletes a game from the whislist
  rpc DeleteGame(DeleteGameWhishRequest) returns (google.protobuf.Empty) {}
}
